@@ -3,6 +3,11 @@ Pending changes in the mainline
 
 * New button "Stretch to whole range" in the "Change windowing" menu
 
+Maintenance
+-----------
+
+* Prevent dragging series before they are ready
+
 
 Version 2.5 (2022-12-05)
 ========================
